dockercoins/kustomize/base/hasher_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hasher
    application: dockercoins
  name: hasher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasher
      application: dockercoins
  strategy: {}
  template:
    metadata:
      labels:
        app: hasher
        application: dockercoins
    spec:
      containers:
      - image: slickteam/dockercoins-hasher:v0.1
        name: hasher
        resources: {}
