dockercoins/kustomize/base/worker_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  strategy: {}
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: slickteam/dockercoins-worker:v0.1
        name: worker
        readinessProbe:
          exec:
            command:
            - "sh"
            - "-c"
            - "curl -X POST -d 'ceci est un test' http://hasher"
          periodSeconds: 1
        resources: {}
