dockercoins/kustomize/base/hasher_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hasher
  name: hasher
spec:
  ports:
  - port: 80
  selector:
    app: hasher
