dockercoins/kustomize/base/rng_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rng
  name: rng
spec:
  ports:
  - port: 80
  selector:
    app: rng
